# bcservico

./: .gitignore  README.md  instruction.md  package.json  plano.md  pnpm-lock.yaml  turbo.json
.claude/: settings.local.json
apps/backend/: .dockerignore  Dockerfile  docker-compose.yml  package.json  tsconfig.build.json
apps/backend/prisma/: schema.prisma  seed.ts
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/auth/: auth.module.ts  auth.service.ts  jwt.strategy.ts
apps/backend/src/cautelas/: cautelas.controller.ts  cautelas.module.ts  cautelas.service.ts
apps/backend/src/sync/: sync.controller.ts  sync.service.ts
apps/desktop/: index.html  package.json  tailwind.config.ts  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: auth.rs  mod.rs  pdf.rs  sync.rs
apps/desktop/src/lib/: auth.ts  db.ts  pdf.ts  sync.ts  utils.ts  validators.ts
apps/desktop/src/pages/: AjudaPage.tsx  CautelaFormPage.tsx  CautelasPage.tsx  ClienteFormPage.tsx  ClientesPage.tsx  ConfiguracoesPage.tsx  DashboardPage.tsx  LoginPage.tsx  OnboardingPage.tsx  ProdutoFormPage.tsx  ProdutosPage.tsx  ReciboFormPage.tsx  RecibosPage.tsx  RelatoriosPage.tsx  UsuarioFormPage.tsx  UsuariosPage.tsx
apps/pwa/: .env.example  .env.production  index.html  package.json  vite.config.ts
apps/pwa/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
(+16 files in other folders)
